objects/Partner_Name__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designated_Sales_Rep_Role__c</fullName>
        <formula>Designated_Sales_Rep__r.UserRole.Name</formula>
        <label>Designated Sales Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designated_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designated Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IMS_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partners1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Partners_after_8_14__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Partners after 8/14</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Plan__c</fullName>
        <label>Other Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Full_Name__c</fullName>
        <label>Partner Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Plan__c</fullName>
        <label>Partner Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$50-$200</fullName>
                    <default>true</default>
                    <label>$50-$200</label>
                </value>
                <value>
                    <fullName>4% rev share</fullName>
                </value>
                <value>
                    <fullName>5% rev share</fullName>
                </value>
                <value>
                    <fullName>6% rev share</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payable_to__c</fullName>
        <label>Payable to</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_W9__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>W9 email will be sent to partner when checked.</inlineHelpText>
        <label>Send W9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Contract Sent</fullName>
                </value>
                <value>
                    <fullName>Contract Received</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_SSN__c</fullName>
        <label>Tax ID/SSN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W9 Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodle_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yodle Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lead_partner_id__c</fullName>
        <formula>Name</formula>
        <label>lead partner id</label>
        <type>Text</type>
    </fields>
    <label>Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Full_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Status__c</columns>
        <columns>Designated_Sales_Rep__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Partner_Plan__c</columns>
        <columns>Other_Plan__c</columns>
        <columns>Address_1__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rogers_Support_Partner_Name</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Send_To_Rogers_Partner_Name</fullName>
        <filterScope>Queue</filterScope>
        <label>Send To Rogers</label>
        <queue>Send_To_Rogers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Partner  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>